<?xml version="1.0"?>
<package format="2">
  <name>msv_arm</name>
  <version>1.0.0</version>
  <description>The msv_arm package allows remote control of the MSV-01 robot's arm.</description>

  <maintainer email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</maintainer>
  <author email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>msv_main</depend>
  
</package>
