<?xml version="1.0"?>
<package format="2">
  <name>msv_imu</name>
  <version>1.0.0</version>
  <description>The msv_main package retrieves the IMU MPU6050 raw data in InvenSense Teapot format.</description>

  <author email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</author>
  <maintainer email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>msv_main</depend>

</package>
