<?xml version="1.0"?>
<package format="2">
  <name>msv_main</name>
  <version>1.0.0</version>
  <description>The msv_main package provides the general abstraction of the MSV_01 robot.</description>

  <author email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</author>
  <maintainer email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
