<?xml version="1.0"?>
<package format="2">
  <name>msv_msgs</name>
  <version>1.0.0</version>
  <description>Auxiliar package for the msv_01 robot messages generation.</description>

  <author email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</author>
  <maintainer email="stb.4421@gmail.com">Victor Esteban Sandoval-Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>msv_main</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
