<package>
  <name>ros_msv</name>
  <version>0.0.0</version>
  <description>
    The ros_msv Metapackage for the MSV-01 robot.
  </description>

  <maintainer email="stb.4421@gmail.com">Victor Sandoval-Luna</maintainer>
  <author email="stb.4421@gmail.com">Victor Sandoval-Luna</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>msv_main</run_depend>
  <run_depend>msv_arm</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
